<resources>
    <string name="app_name">NoteOlvides</string>
    <string name="copyright">Main Menu</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="SignUp">SIGN UP</string>
    <string name="applyChanges">APPLY CHANGES</string>
    <string name="Socials">or use any of your social profiles</string>
    <string name="Twitter">Twitter</string>
    <string name="Facebook">Facebook</string>
    <string name="SignIn">SIGN IN</string>

    <string name="facebook_app_id">234423575148047</string>
    <string name="fb_login_protocol_scheme">fb234423575148047</string>

    <!--<string name="twitter_api_key">REPLACE_KEY</string>
    <string name="twitter_api_secret">REPLACE_SECRET</string>-->
    <string name="com.twitter.sdk.android.CONSUMER_KEY">4gD4VYBLN2eKX8otghHXJmRLP</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Qk9VY3mHMiP4XRtLtUk3F0A7rmQxEcl6nISnOzLoTaGF6IlRpO</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>