<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activity_register">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarRegist"
        />

    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:textSize="25dp"
        android:layout_below="@id/toolbarRegist"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="REGISTER"

        />

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegisterText"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/textbody"
        android:text="First Name"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="Firstname"
        android:layout_below="@id/firstNameText"
        />

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstName"
        android:layout_marginLeft="50dp"
        android:textColor="@color/textbody"
        android:text="Last Name"
        />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="Lastname"
        android:layout_below="@id/lastNameText"
        />

    <ImageView
        android:id="@+id/registerBackButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastName"
        android:layout_marginLeft="50dp"
        android:textColor="@color/textbody"
        android:text="User Name"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="usernamExample"
        android:layout_below="@id/usernameText"
        />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginLeft="50dp"
        android:textColor="@color/textbody"
        android:text="Email"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="example@email.com"
        android:layout_below="@id/emailText"
        />

    <TextView
        android:id="@+id/registerPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="50dp"
        android:textColor="@color/textbody"
        android:text="Password"
        />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="************"
        android:layout_below="@id/registerPasswordText"
        />

    <TextView
        android:id="@+id/repeatPasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPassword"
        android:layout_marginLeft="50dp"
        android:textColor="@color/textbody"
        android:text="Repeat Password"
        />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="************"
        android:layout_below="@id/repeatPasswordText"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:background="@color/textbody"
        android:textColor="@color/white"
        android:text = "@string/SignUp"
        android:textStyle="bold"
        android:layout_below="@id/repeatPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/registerSocialsTextSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Socials"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/signUpButton"
        android:layout_centerHorizontal="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/registerFacebookButton"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_below="@id/registerSocialsTextSign"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp" />

    <!--<Button
        android:id="@+id/registerFacebookButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerSocialsTextSign"
        android:layout_toRightOf="@id/registerTwitterButton"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="20dp"
        android:background="@color/facebookBlue"
        android:text="@string/Facebook"
        android:textColor="@color/white"
        android:textStyle="bold" />-->

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/twitterButton"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_below="@id/registerFacebookButton"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp" />

    <!--<Button
        android:id="@+id/registerTwitterButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerFacebookButton"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/twitterBlue"
        android:text="@string/Twitter"
        android:textColor="@color/white"
        android:textStyle="bold" />-->

</RelativeLayout>